--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Features -->
   <section id="features">
-
+  <div class="container">
     <div class="container px-4 py-5" id="hanging-icons">
 
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -98,6 +98,7 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
 
   <!-- Testimonial -->
